--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Node.JS + TypeScript + Serverless + DynamoDB + SQS + SNS + S3",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install",
+    "lint": "eslint",
+    "lint:fix": "npm run lint --fix"
   },
   "keywords": [
     "Node.JS",
@@ -19,8 +22,16 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^16.11.6",
-    "husky": "^7.0.4",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.1",
+    "husky": "^7.0.0",
     "lint-staged": "^11.2.6",
     "typescript": "^4.4.4"
-  }
+  },
+  "dependencies": {}
 }
