--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Node.JS + TypeScript + Serverless + DynamoDB + SQS + SNS + S3",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install",
     "lint": "eslint",
     "lint:fix": "npm run lint --fix"
@@ -31,6 +30,7 @@
     "eslint-plugin-promise": "^5.1.1",
     "husky": "^7.0.0",
     "lint-staged": "^11.2.6",
+    "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   },
   "dependencies": {}
