--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "prepare": "husky install",
     "lint": "eslint",
-    "lint:fix": "npm run lint --fix"
+    "lint:fix": "npm run lint --fix",
+    "test": "jest --passWithNoTests --runInBand --forceExit",
+    "test:staged": "npm test -- --findRelatedTests",
+    "test:coverage": "npm test -- --coverage"
   },
   "keywords": [
     "Node.JS",
@@ -20,6 +23,9 @@
   "author": "Douglas Dennys <douglasdennys45@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@shelf/jest-dynamodb": "^2.1.0",
+    "@types/faker": "^5.5.9",
+    "@types/jest": "^27.0.2",
     "@types/node": "^16.11.6",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
@@ -28,9 +34,15 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.1",
+    "faker": "^5.5.3",
     "husky": "^7.0.0",
+    "jest": "^27.3.1",
+    "jest-mock-extended": "^2.0.4",
     "lint-staged": "^11.2.6",
+    "ts-jest": "^27.0.7",
+    "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
+    "tsconfig-paths": "^3.11.0",
     "typescript": "^4.4.4"
   },
   "dependencies": {}
