definindo entities user

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,7 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "no-useless-constructor": "off",
+        "no-undef": "off"
     }
 }
