iniciando configuraçao de caso de uso para criaçao de usuario

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,8 @@
     ],
     "rules": {
         "no-useless-constructor": "off",
-        "no-undef": "off"
+        "no-undef": "off",
+        "no-redeclare": "off",
+        "no-use-before-define": "off"
     }
 }
