chore: correçao em build

--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
   "author": "Douglas Dennys <douglasdennys45@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@aws-sdk/client-dynamodb": "^3.39.0",
-    "@serverless/typescript": "^2.64.1",
+    "@serverless/typescript": "^2.65.0",
     "@shelf/jest-dynamodb": "^2.1.0",
     "@types/aws-lambda": "^8.10.85",
     "@types/faker": "^5.5.9",
@@ -47,8 +46,8 @@
     "lint-staged": "^11.2.6",
     "module-alias": "^2.2.2",
     "serverless": "^2.65.0",
+    "serverless-esbuild": "^1.21.1",
     "serverless-offline": "^8.2.0",
-    "serverless-plugin-typescript": "^2.1.0",
     "ts-jest": "^27.0.7",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
